crates/solidity/testing/snapshots/bindings_output/events/emit_stmt/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts (crates/solidity/outputs/cargo/tests/src/bindings_output/runner.rs). Please don't edit by hand.

Parse errors:
Error: Expected Equal or Semicolon.
   ╭─[input.sol:7:23]
   │
 7 │         emit TestEvent(x);
   │                       ─┬─  
   │                        ╰─── Error occurred here.
───╯
Error: Expected Equal or Semicolon.
   ╭─[input.sol:8:19]
   │
 8 │         emit Utils.Debug(x);
   │                   ────┬────  
   │                       ╰────── Error occurred here.
───╯
References and definitions: 
    ╭─[input.sol:1:1]
    │
  1 │ contract Test {
    │          ──┬─  
    │            ╰─── name: 1
  2 │     event TestEvent(int id);
    │           ────┬────     ─┬  
    │               ╰───────────── name: 2
    │                          │  
    │                          ╰── name: 3
    │ 
  4 │     function test_emit() public {
    │              ────┬────  
    │                  ╰────── name: 4
  5 │         int x = 1;
    │             ┬  
    │             ╰── name: 5
    │ 
  7 │         emit TestEvent(x);
    │         ──┬─ ────┬────  
    │           ╰───────────── unresolved
    │                  │      
    │                  ╰────── name: 6
  8 │         emit Utils.Debug(x);
    │         ──┬─ ──┬──  
    │           ╰───────── unresolved
    │                │    
    │                ╰──── name: 7
    │ 
 12 │ library Utils {
    │         ──┬──  
    │           ╰──── name: 8
 13 │     event Debug(int subject);
    │           ──┬──     ───┬───  
    │             ╰──────────────── name: 9
    │                        │     
    │                        ╰───── name: 10
────╯
Definiens: 
    ╭─[input.sol:1:1]
    │
  1 │ ╭───────▶ contract Test {
  2 │ │ │           event TestEvent(int id);
    │ │ │       ──────────────┬────────┬─────  
    │ │ │                     ╰──────────────── definiens: 2
    │ │ │                              │       
    │ │ │                              ╰─────── definiens: 3
  3 │ │ ╭─────▶ 
    ┆ ┆ ┆       
  5 │ │ │   │           int x = 1;
    │ │ │   │   ─────────┬─────────  
    │ │ │   │            ╰─────────── definiens: 5
  6 │ │ │   ╭─▶ 
  7 │ │ │   ├─▶         emit TestEvent(x);
    │ │ │   │                                
    │ │ │   ╰──────────────────────────────── definiens: 6
  8 │ │ │               emit Utils.Debug(x);
    │ │ │       ──────────────┬──────────────  
    │ │ │                     ╰──────────────── definiens: 7
  9 │ │ ├─────▶     }
    │ │ │               
    │ │ ╰─────────────── definiens: 4
 10 │ ├───│ ──▶ }
    │ │   │         
    │ ╰───────────── definiens: 1
 11 │     ╭───▶ 
    ┆     ┆     
 13 │     │         event Debug(int subject);
    │     │     ───────────────┬─────┬────────  
    │     │                    ╰──────────────── definiens: 9
    │     │                          │          
    │     │                          ╰────────── definiens: 10
 14 │     ├───▶ }
    │     │         
    │     ╰───────── definiens: 8
────╯
